task_2/nginx-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
spec:
  rules:
  - host: nginx.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-canary
            port:
              number: 80
